--- a/WinCore/WinCore.vcxproj.filters
+++ b/WinCore/WinCore.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="ADE32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="D3D9Hook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ADE32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="D3D9Hook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
