--- a/WinCore/WinCore.vcxproj
+++ b/WinCore/WinCore.vcxproj
@@ -40,6 +40,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <GenerateManifest>true</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -88,6 +89,7 @@
     <ClInclude Include="MemoryRegion.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="Process.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Thread.h" />
@@ -116,6 +118,9 @@
     </ClCompile>
     <ClCompile Include="Thread.cpp" />
     <ClCompile Include="WinCore.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="fileversion.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
