--- a/WinCore/WinCore.vcxproj.filters
+++ b/WinCore/WinCore.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="D3D9Hook.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -100,5 +103,10 @@
     <MASM Include="assembly.asm">
       <Filter>Assembly</Filter>
     </MASM>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="fileversion.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
